Revert Groovy upgrade. (#97)