@@ -45,6 +45,7 @@ COMPATIBILITY_OPTS=""
 if [ $JAVA_VER -gt 18 ]; then
     COMPATIBILITY_OPTS="--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED
         --add-opens=java.base/java.lang=ALL-UNNAMED
+        --add-opens=java.base/java.lang.invoke=ALL-UNNAMED # Hides warning caused by Groovy 2.4.7, remove this once Groovy is upgraded (#97)
         --add-opens=java.base/java.net=ALL-UNNAMED
         --add-opens=java.base/java.util=ALL-UNNAMED"
 fi
